[Fix] results-detail: z-index

--- a/static/prototype/src/app/components/results-detail/results-detail.component.scss
+++ b/static/prototype/src/app/components/results-detail/results-detail.component.scss
@@ -8,6 +8,7 @@
   position: fixed;
   top: 0px;
   left: 0px;
+  z-index: 2;
 
   .close {
     position: absolute;
